@@ -17,25 +17,25 @@ dependencies {
     
     testImplementation group: 'org.eclipse.elk', name: 'org.eclipse.elk.core'      , version: '0.3.0'
 
-    testImplementation project(":file.json")
-    
-    testRuntimeOnly    project(":file.json")
-
-    testImplementation project(":file.toml")
-    
-    testRuntimeOnly    project(":file.toml")
-    
-    testImplementation project(":model")
-    
-    testImplementation project(":control")
-
     testImplementation project(":main")
-    
-    testImplementation project(":control")
     
     testImplementation project(":view")
     
     testImplementation project(":api")
 
+    testImplementation project(":algorithm.greedy")
+    
+    testImplementation project(":file.json")
 
+    testImplementation project(":file.toml")
+
+
+}
+
+tasks.withType(Test) {
+    doFirst {
+        jvmArgs('--module-path', classpath.asPath)
+        jvmArgs('--add-modules',"ALL-MODULE-PATH")
+        jvmArgs('--add-reads','de.webtwob.agd.project.test=junit')
+    }
 }
